css/style.css
/* ... */
.content.classy p:first-line {
  text-transform: uppercase;
  -moz-font-feature-settings: "smcp=1";
  -moz-font-feature-settings: "smcp";
  -ms-font-feature-settings: "smcp";
  -webkit-font-feature-settings: "smcp";
  -o-font-feature-settings: "smcp";
  font-feature-settings: "smcp";
}

/* everyday */

.content.everyday {
  font-family: Roboto, sans-serif;
  font-weight: 300;
}

.everyday h1,
.everyday h2,
.everyday h3,
.everyday h4,
.everyday h5,
.everyday h6 {
  font-family: Roboto, sans-serif;
  text-transform: uppercase;
  font-weight: 900;
  letter-spacing: .02em;
}

/* ACADEMIC */

.content.academic {
  font-family: Latin Modern Roman, Georgia;
  padding: 10%;
  padding-top: 0;
  ;
  font-size: 15px;
}

.academic h1,
.academic h2,
.academic h3,
.academic h4,
.academic h5,
.academic h6 {
  font-family: Latin Modern Roman, Georgia;
}


/* JOLLY*/

.content.jolly {
  font-family: Comic Neue, Ubuntu;
  font-weight: 300;
}

.jolly h1,
.jolly h2,
.jolly h3,
.jolly h4,
.jolly h5,
.jolly h6 {
  font-weight: 700;
  font-family: Comic Neue, Ubuntu;
}

/* Hip */

.content.hipster {
  font-family: Alegreya, Georgia, serif;
}

.hipster h1,
.hipster h2,
.hipster h3,
.hipster h4,
.hipster h5,
.hipster h6 {
  font-family: Bebas Neue;
  font-weight: 900;
  border-bottom: 3px solid orange;
}

/* FONTS */

@font-face {
  font-family: 'Bebas Neue';
  src: url('../fonts/bebasneue_regular-webfont.eot');
  src: url('../fonts/bebasneue_regular-webfont.eot?#iefix') format('embedded-opentype'),
    url('../fonts/bebasneue_regular-webfont.woff') format('woff'),
    url('../fonts/bebasneue_regular-webfont.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Bebas Neue';
  src: url('../fonts/bebasneue_light-webfont.eot');
  src: url('../fonts/bebasneue_light-webfont.eot?#iefix') format('embedded-opentype'),
    url('../fonts/bebasneue_light-webfont.woff') format('woff'),
    url('../fonts/bebasneue_light-webfont.ttf') format('truetype');
  font-weight: 200;
  font-style: normal;
}

@font-face {
  font-family: 'Bebas Neue';
  src: url('../fonts/bebasneue_bold-webfont.eot');
  src: url('../fonts/bebasneue_bold-webfont.eot?#iefix') format('embedded-opentype'),
    url('../fonts/bebasneue_bold-webfont.woff') format('woff'),
    url('../fonts/bebasneue_bold-webfont.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
}

/* ======================= MEDIA QUERIES ======================== */

@media print {

  @page {
    margin: 0;
  }

  body {
    color: black;
    padding: 0;
  }

  .content {
    font-size: 10pt;
  }

  hr {
    color: #999;
  }

  hr:after {
    display: none !important;
  }

  .settings {
    display: none;
  }

  a:after {
    content: " (" attr(href) ") ";
    font-weight: 200;
  }
}


/* This section contributed by @skela,  “Do with this what you will ❤” (https://github.com/markdowner/markdowner.github.io/issues/5) */
@media print {
  body{
    -webkit-print-color-adjust: exact; /*chrome & webkit browsers*/
    print-color-adjust: exact; /*firefox & IE */
  }
  .pagebreak { page-break-before: always; } /* page-break-after works, as well */
}

.lang-python {
	padding: 0;
}
/* end contributed section */

/* Medium*/

@media all and (min-width:640px) {
  .site-header .amp {
    display: inline;
  }
}

/* Large */

@media all and (min-width:960px) {

  body {
    font-size: 22px;
  }

  .humanize-button {
    float: right;
    width: auto;
  }



  .github-ribbon {
    display: block;
  }

  .view {
    float: left;
    display: inline-block;
    margin: 3%;
  }

  .settings {
    position: fixed;
    right: 20px;
    top: 20%;
    width: 200px;
    font-size: .7em;
    opacity: .5;
    text-align: right;
  }

  .settings:hover {
    opacity: 1;
  }

  .settings-bar {
    margin-top: 20px;
  }
}

